--- a/src/index.css
+++ b/src/index.css
@@ -103,6 +103,24 @@
   cursor: pointer;
 }
 
+/* no found page */
+
+.not-found h2 {
+  font-size: 20px;
+  color: #667AB3;
+  margin-bottom: 30px;
+}
+
+.not-found p {
+  margin: 20px 0;
+}
+
+.not-found a {
+  text-decoration: none;
+  color: #667AB3;
+}
+
+
 /* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
